--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -606,7 +606,7 @@
                     <h5 class="card-title">CONTROL ESCOLAR</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Miriam Selene Campusano Maya</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable Control Escolar</br>
+                      Cargo: </br>Coordinadora Control Escolar</br>
                       Correo: </br>miriam.capuzano@s4learning.com</br>
                     </p>
                   </div>
@@ -617,7 +617,7 @@
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Viviana Ingrid Nava Sánchez</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Equivalencia Revalidación y Constancias QR</br>
+                      Cargo: </br>Supervisora de Equivalencia Revalidación y Constancias QR</br>
                       Correo: </br>viviana.nava@s4learning.com</br>
                       Funciones:</br>Emisión de documentos institucionales: constancia de estudios o de término, historial académico, avance curricular, título intermedio, credencial de estudiante y egresado, etc.| Elaboración de predictámenes de equivalencia | Carga de calificaciones de resolución de equivalencia en SIU.
                     </p>
@@ -629,7 +629,7 @@
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Selene Abigail Guarneros</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Aceptación y Rechazo de Aspirantes</br>
+                      Cargo: </br>Supervisora de Aceptación y Rechazo de Aspirantes</br>
                       Correo: </br>sguarnga@utel.edu.mx</br>
                       Funciones:</br>Verifica los documentos requeridos para la admisión de estudiantes | Valida el nivel, el tipo de ingreso y fecha de inicio | Matricula a los estudiantes que cumplen con los requisitos.
                     </p>
@@ -642,7 +642,7 @@
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Raúl Osvaldo Mares Castro</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Configuración Banner</br>
+                      Cargo: </br>Supervisor de Configuración Banner</br>
                       Correo: </br>rmaresca@utel.edu.mx</br>
                       Funciones:</br>Estructura los insumos para la correcta operación del sistema al servicio de diferentes áreas (gestión de matrícula, academia, etc.) | Atención a solicitudes de bajas de estudiante | Cancelaciones de venta | Cambio de calificación | Cambio de área de concentración | Altas, bajas y cambios de materia; etc.
 
@@ -655,7 +655,7 @@
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Francisco Javier Sandoval</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable Institucional de Servicio Social</br>
+                      Cargo: </br>Coordinador Institucional de Servicio Social</br>
                       Correo: </br>fsandoce@s4learning.com</br>
                       Funciones:</br>Atención a los estudiantes en el proceso de servicio social (inicio, práctica y liberación) 
 
@@ -668,7 +668,7 @@
                     <h5 class="card-title">COACH UNIVERSITARIO</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Mónica Castelló Barajas</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable Coach Universitario</br>
+                      Cargo: </br>Coordinadora Coach Universitario</br>
                       Correo: </br>monica.castello@utel.edu.mx</br>
                       Funciones:</br>Atención a los estudiantes que desean liberar el servicio social mediante el programa de Coach Universitario 
 
@@ -679,9 +679,9 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Marlen García Garcés</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Claudia Paulina Bruno López</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Alianzas Utel</br>
+                      Cargo: </br>Supervisora de Alianzas Utel</br>
                       Correo: </br>marlen.garcia@s4learning.com</br>
                       Funciones:</br>Atención a procesos de servicios escolares de las instituciones aliadas 
 
@@ -694,7 +694,7 @@
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Gerardo Badillo García</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable Titulación y Certificación</br>
+                      Cargo: </br>Coordinador Titulación y Certificación</br>
                       Correo: </br>gbadilga@utel.edu.mx</br>
                       
                     </p>
@@ -732,7 +732,7 @@
                     <h5 class="card-title">SERVICIOS ESCOLARES</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Griselda García Vargas</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentora Doble Reconocimiento USA</br>
+                      Cargo: </br>Supervisora equivalencia académica</br>
                       Correo: </br>ggarciavar@utel.edu.mx</br>
                       Funciones:</br> Resolución de dudas de titulación
                     </p>
@@ -764,7 +764,7 @@
                     <h5 class="card-title">CONTROL DOCUMENTAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Adilene Tepetzi García</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable Control Documental</br>
+                      Cargo: </br>Coordinadora Control Documental</br>
                       Correo: </br>adilene.tepetzi@s4learning.com</br>
                     </p>
                   </div>
@@ -775,7 +775,7 @@
                     <h5 class="card-title">CONTROL DOCUMENTAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Odet Brenda González Vega</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Correspondencia Estudiantil</br>
+                      Cargo: </br>Supervisora de Correspondencia Estudiantil</br>
                       Correo: </br>ogonzalveg@utel.edu.mx</br>
                     </p>
                   </div>
@@ -786,7 +786,7 @@
                     <h5 class="card-title">CONTROL DOCUMENTAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Marlene Yamel Bocanegra</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable Dictaminación de Documentos</br>
+                      Cargo: </br>Supervisora Dictaminación de Documentos</br>
                       Correo: </br>yamel.bocanegra@utel.edu.mx</br>
                       Funciones: </br> Revisión digital de antecedentes académicos | Valoración de elementos de validez y registro | Solicitud de validación externa ante la autoridad educativa. 	
                     </p>
@@ -798,7 +798,7 @@
                     <h5 class="card-title">CONTROL DOCUMENTAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">María del Rosario Madero Sánchez</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentor Recolección de Documentos</br>
+                      Cargo: </br>Supervisora Recolección de Documentos</br>
                       Correo: </br>mmadersa@utel.edu.mx</br>
                       Funciones: </br> Seguimiento en la confirmación de expediente escolar | Contactación a los alumnos para el cumplimiento documental | Proporcionar los elementos para el envío de documentos escolares.
                     </p>
@@ -810,7 +810,7 @@
                     <h5 class="card-title">CONTROL DOCUMENTAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Julio César Romero Peña</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentor de Recolección Documental Internacional</br>
+                      Cargo: </br>Supervisor de Recolección Documental Internacional</br>
                       Correo: </br>julio.romero@s4learning.com</br>
                       Funciones: </br> Seguimiento en la confirmación de expediente escolar | Contactación a los estudiantes para el cumplimiento documental | Proporcionar los elementos para el envío de documentos escolares.
                     </p>
@@ -822,7 +822,7 @@
                     <h5 class="card-title">CONTROL DOCUMENTAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Maricela García Rosales</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Administración de Archivo</br>
+                      Cargo: </br>Supervisora de Administración de Archivo</br>
                       Correo: </br>magarciar@utel.edu.mx</br>
                       Funciones: </br> Recepción y resguardo de expedientes físicos de estudiantes | Préstamo, devolución y digitalización de documentos.
                     </p>
@@ -834,7 +834,7 @@
                     <h5 class="card-title">COMUNICACIÓN Y ATENCIÓN</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Laura Patricia Zúñiga</h6>
                     <p class="card-text">
-                      Cargo: </br>Responsable de Comunicación y atención</br>
+                      Cargo: </br>Coordinadora de Comunicación y atención</br>
                       Correo: </br>laura.zuniga@s4learning.com</br>
                     </p>
                   </div>
@@ -845,7 +845,7 @@
                     <h5 class="card-title">COMUNICACIÓN Y ATENCIÓN</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Omar León Álamo</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentor Control Escolar</br>
+                      Cargo: </br>Supervisor Control Escolar</br>
                       Correo: </br>oleonala@utel.edu.com.mx</br>
                       Funciones: </br> Seguimiento en la confirmación de expediente escolar | Contactación a los estudiantes para el cumplimiento documental | Proporcionar los elementos para el envío de documentos escolares. 	
                     </p>
@@ -857,7 +857,7 @@
                     <h5 class="card-title">COMUNICACIÓN Y ATENCIÓN</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Guadalupe Mejía Álvarez</h6>
                     <p class="card-text">
-                      Cargo: </br>Mentora Servicios Escolares</br>
+                      Cargo: </br>Supervisora Servicios Escolares</br>
                       Correo: </br>gmajiaal@utel.edu.mx</br>
                       Funciones: </br> Atención a estudiantes o egresados en los servicios prestados o complementos adquiridos: constancias QR, trámite de equivalencia y revalidación, servicio social, titulación | Evaluación de calidad en el servicio y atención brindados al estudiante y egresado.
                     </p>
@@ -869,7 +869,6 @@
                     <h5 class="card-title">COORDINADOR DE SERVICIOS ADMINISTRATIVOS UI INTERNACIONAL</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Julio Romero Peña</h6>
                     <p class="card-text">
-                      Cargo: </br></br>
                       Correo: </br>julio.romero@utel.edu.mx</br>
                       Funciones: </br> Atención a estudiantes o egresados en los servicios prestados o complementos adquiridos: constancias QR, trámite de equivalencia y revalidación, servicio social, titulación | Evaluación de calidad en el servicio y atención brindados al estudiante y egresado.
                     </p>
