--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1488,7 +1488,7 @@
 
                       <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
                         
-                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.png">
+                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.PNG">
                         
                       </div> 
 
@@ -1516,7 +1516,7 @@
                         
                       <a href="https://siged.sep.gob.mx/SIGED/documentos.html?folio=CTG17017688" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion1.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion1.PNG">
                         </button>
                       </a> 
                     </div>
@@ -1528,7 +1528,7 @@
                     <div class="col-lg-6 card border-0">
                       <a href="https://siiaa.cbachilleres.edu.mx/certificados/" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion2.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion2.PNG">
                         </button>
                       </a> 
                     </div>
@@ -1542,7 +1542,7 @@
                     <div class="col-lg-6 card border-0">
                       <a href="http://www.pace.sep.gob.mx/certificadosdgb/certificadoremesadetalles?find=ByFolioEq" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion3.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion3.PNG">
                         </button>
                       </a> 
                     </div>
@@ -1556,7 +1556,7 @@
                     <div class="col-lg-6 card border-0">
                       <a href="https://certificados.cecyte.saeko.io/" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion4.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion4.PNG">
                         </button>
                       </a> 
                     </div>
@@ -1570,7 +1570,7 @@
                     <div class="col-lg-6 card border-0">
                       <a href="https://prepaenlinea.sep.gob.mx/validarcertificado/" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion5.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion5.PNG">
                         </button>
                       </a> 
                     </div>
@@ -1585,7 +1585,7 @@
                     <div class="col-lg-6 card border-0">
                       <a href="https://sems.edomex.gob.mx/ventanilla-electronica" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion6.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion6.PNG">
                         </button>
                       </a> 
                     </div>
@@ -1599,7 +1599,7 @@
                     <div class="col-lg-6 card border-0">
                       <a href="https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
-                          <img class="img-fluid" src="./img/Recoleccion/Validacion7.png">
+                          <img class="img-fluid" src="./img/Recoleccion/Validacion7.PNG">
                         </button>
                       </a> 
                     </div>
