--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1480,6 +1480,7 @@
                     
 
                     <div class="col-lg-5">
+                      <img class="mx-auto d-block img-fluid" src="img/Recoleccion/dicdocs.png">
                       
                     </div>
 
