--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -73,11 +73,12 @@
   <br/>   
 
 
-  <div class="accordion" id="accordionPanelsStayOpen">
+  <div class="accordion p-3" id="accordionPanelsStayOpen">
 
     <h4 class=" text-center"><b>Modalidades</b></h4>
-          
-    <p style="text-align: justify;">
+
+    
+      <p style="text-align: justify;">
       Con base en la normatividad, en Utel contamos con 3 opciones de liberación: <br/>
       1. Regular (los programas existentes hasta el momento).<br/>
       2. Artículo 91. Alumnos trabajadores en activo de la Federación o del Gobierno de alguno de los estados de la República Mexicana.<br/>
@@ -85,7 +86,9 @@
       <br/> 
       Las modalidades Trabajo colaborativo, Para las juventudes, Coach titulación y profesionalización, Para la comunidad, Con causa, Empresas y emprendimientos y Programa de tutorías, son derivadas de la modalidad de servicio social regular.
 
-    </P>
+      </P>
+          
+    
 
     <!--Servicio social Regular-->
     <div class="accordion-item">
