--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -56,7 +56,7 @@
             <div class="card-body">
               <h5 class="card-title">Equivalencia Ecuador</h5>
               <p class="card-text" style="text-align: justify;">
-                SENESYT solicita carta CINE UNESCO, para trámite de convalidación. Los egresados que hayan realizado el pago del certificado de programa académico (CPA) quedan exentos del pago de la carta CINE UNESCO, esto aplica para las matrículas a las que aún se les solicitó el pago del CPA, con anterioridad.
+                SENESYT solicita carta CINE UNESCO, para trámite de Equivalencia academica. Los egresados que hayan realizado el pago del certificado de programa académico (CPA) quedan exentos del pago de la carta CINE UNESCO, esto aplica para las matrículas a las que aún se les solicitó el pago del CPA, con anterioridad.
               </p>
             </div>
           </div>
