--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -1470,7 +1470,7 @@
             Es el procedimiento mediante el cual la institución donde estudio el bachillerato subsana datos faltantes en el Certificado de estudios de Bachillerato
           </P>
 
-          <h4><b>Proceso</b></h4>
+          <h4 class="text-center"><b>Proceso</b></h4>
 
           <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
             <div class="col">
@@ -1487,12 +1487,31 @@
 
                     <div class="col-lg-7">
 
-                      <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
+                      <div class="card border-0 mb-3 py-2" style="display: block;">
+
+                         <h4 class="text-center" >Constancia de autenticidad</h4>
                         
                         <img class="mx-auto d-block img-fluid" src="img/Recoleccion/acuse-autenticacion.PNG">
                         
-                      </div> 
+                      </div>
 
+                      <div class="card border-0 mb-3 py-2" style="display: block;">
+
+                        <h4 class="text-center" >Aviso para el alumno</h4>
+                        
+                        <img class="mx-auto d-block img-fluid" src="img/Recoleccion/infoalumnos.PNG">
+                        
+                      </div>  
+
+                    </div>
+
+                    <div class="border-3 card card-aviso mx-3 mb-3 justify-content-center ">
+                      <div class="card-body">
+
+                        <p class="card-text">
+                          DAPO: es el el nombre de la solicitud proceso de detección de documentación que carece de validez oficial.
+                        </p>
+                      </div>
                     </div>
 
                     
@@ -1508,12 +1527,12 @@
               <div class="card border-0 mb-3" >
                   <div class="row g-0">   
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                       Sistema de Información y Gestión Educativa<br/>
                       Validación de documentos académicos electrónicos
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3">
                         
                       <a href="https://siged.sep.gob.mx/SIGED/documentos.html?folio=CTG17017688" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
@@ -1522,11 +1541,11 @@
                       </a> 
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                        Validación de certificados del colegio de bachilleres
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3 card border-0">
                       <a href="https://siiaa.cbachilleres.edu.mx/certificados/" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
                           <img class="img-fluid" src="./img/Recoleccion/Validacion2.PNG">
@@ -1535,12 +1554,12 @@
                     </div>
                     
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                       Consulta de Certificados<br/>
                       Dirección general de bachillerato
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3 card border-0">
                       <a href="http://www.pace.sep.gob.mx/certificadosdgb/certificadoremesadetalles?find=ByFolioEq" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
                           <img class="img-fluid" src="./img/Recoleccion/Validacion3.PNG">
@@ -1549,12 +1568,12 @@
                     </div>
 
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                     Validación de certificados del cecyte
 
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3 card border-0">
                       <a href="https://certificados.cecyte.saeko.io/" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
                           <img class="img-fluid" src="./img/Recoleccion/Validacion4.PNG">
@@ -1563,12 +1582,12 @@
                     </div>
 
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                     Validación de certificados de la Prepa en Línea-SEP
 
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3">
                       <a href="https://prepaenlinea.sep.gob.mx/validarcertificado/" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
                           <img class="img-fluid" src="./img/Recoleccion/Validacion5.PNG">
@@ -1577,13 +1596,13 @@
                     </div>
 
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                     Ventanilla Electrónica<br/>
                     Subsecretaría de Educación Media Superior
 
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3">
                       <a href="https://sems.edomex.gob.mx/ventanilla-electronica" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
                           <img class="img-fluid" src="./img/Recoleccion/Validacion6.PNG">
@@ -1592,12 +1611,12 @@
                     </div>
 
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-3">
                     Validación de certificados del Conalep
 
                     </div>
 
-                    <div class="col-lg-6 card border-0">
+                    <div class="col-lg-3 ">
                       <a href="https://ct.conalep.edu.mx/folio?f=2f606dc2-3d22-4aca-9af8-22ee96de8d3f" target="_blank">
                         <button class="col btn botonejemdoc" type="button" >
                           <img class="img-fluid" src="./img/Recoleccion/Validacion7.PNG">
