--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -73,7 +73,7 @@
                     <h5 class="card-title">Comunicación SER</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Laura Patricia Zúñiga Vargas</h6>
                     <p class="card-text">
-                      Teléfono: </br>5513289010</br>
+                      Teléfono: </br>5513289019</br>
                       Correo: </br>titulacion@utel.edu.mx
                     </p>
                   </div>
@@ -331,7 +331,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Emergente/ Multipaís</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador </br>
                       Correo:</br> brian.borda@utel.edu.mx
@@ -342,7 +342,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">ARGENTINA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -357,7 +357,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">BOLIVIA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -372,7 +372,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">CHILE</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -386,7 +386,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">ESPAÑA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -401,7 +401,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">GUATEMALA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -416,7 +416,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">INTERNACIONAL </h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -431,7 +431,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">NICARAGUA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -447,7 +447,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">PANAMÁ</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -462,7 +462,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">PARAGUAY</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -477,7 +477,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">REPÚBLICA DOMINICANA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -492,7 +492,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">EL SALVADOR</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -508,7 +508,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">URUGUAY</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -523,7 +523,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">USA</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Brian Borda</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
                     <p class="card-text">
                       Cargo: Coordinador</br>
                       Correo Éxito Estudiantil:</br> 
@@ -832,7 +832,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">COMUNICACIÓN Y ATENCIÓN</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Laura Patricia Zúñiga</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Laura Patricia Zúñiga Vargas</h6>
                     <p class="card-text">
                       Cargo: </br>Coordinadora de Comunicación y atención</br>
                       Correo: </br>laura.zuniga@s4learning.com</br>
