--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -94,7 +94,7 @@
             <div class="card-body">
               <h5 class="card-title">Evento de entrega de documentos</h5>
               <p class="card-text" style="text-align: justify;">
-                El pasado 23 de septiembre se llevo a cabo la entrega de documentos en UTEL. Siendo un exito con asistencia del 85%.
+                El pasado 11 de noviembre se llevó a cabo la entrega de documentos en UTEL. Siendo un éxito con asistencia del 89.6%.
               </p>  
             </div>
           </div>
