--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -2861,7 +2861,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Conocer el estatus de la Representación gráica RG 
+      Conocer el estatus de la representación gráfica
     </div>
 
     <div class="col col-mb-4">
@@ -2881,7 +2881,7 @@
     </div>
 
     <div class="col col-mb-4">
-      Revisar el estatus que guarda el alumno con respecto al SS Se puede revisar fechas de inicio y término
+      Revisar el estatus que guarda el alumno con respecto al servicio social, se puede revisar fechas de inicio y término
     </div>
 
     <div class="col col-mb-4">
@@ -2926,7 +2926,7 @@
 
   <div class="row">
     <div class="col col-mb-4">
-      Escaneo de doc
+      Escaneo de documentos
     </div>
 
     <div class="col col-mb-4">
