--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -2495,7 +2495,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR DIGITALES</h5>
+                    <h5 class="card-title">Coordinador digitales</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Doriann Samantha Villar Aramburo</h6>
                     <p class="card-text">
                       Correo:</br> dvillaar@utel.edu.mx</br>
@@ -2506,7 +2506,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR LICENCIATURAS ONLINE</h5>
+                    <h5 class="card-title">Coordinador licenciaturas online</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Iván Francisco Marín Ramírez</h6>
                     <p class="card-text">
                       Correo:</br> imarinra@utel.edu.mx</br>
@@ -2517,7 +2517,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR LICENCIATURAS ONLINE</h5>
+                    <h5 class="card-title">Coordinador licenciaturas online</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Kiren Omar Ramos González</h6>
                     <p class="card-text">
                       Correo:</br>kramosgo@utel.edu.mx</br>
@@ -2528,7 +2528,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR INTERNACIONAL</h5>
+                    <h5 class="card-title">Coordinador internacional</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Jessica Martínez Rivera</h6>
                     <p class="card-text">
                       Correo:</br> jmartinr@utel.edu.mx</br>
@@ -2539,7 +2539,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR ALTO RENDIMIENTO</h5>
+                    <h5 class="card-title">Coordinador alto rendimiento</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Yareli Itzamar Ortega Ruiz</h6>
                     <p class="card-text">
                       Correo:</br> yortegru@utel.edu.mx</br>
@@ -2550,7 +2550,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR LICENCIATURAS ONLINE</h5>
+                    <h5 class="card-title">Coordinador licenciaturas online</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Ruben Omar Hernández Flores</h6>
                     <p class="card-text">
                       Correo:</br> rhernafl@utel.edu.mx</br>
@@ -2561,7 +2561,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR LICENCIATURAS ONLINE</h5>
+                    <h5 class="card-title">Coordinador licenciaturas online</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Raul Alejandro Bernal Carreon</h6>
                     <p class="card-text">
                       Correo:</br> rbernalcar@utel.edu.mx</br>
@@ -2572,7 +2572,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADOR POSGRADOS</h5>
+                    <h5 class="card-title">Coordinador posgrados</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Miguel Ricardo Guillen Flores</h6>
                     <p class="card-text">
                       Correo:</br>mguilleflo@utel.edu.mx</br>
@@ -2583,7 +2583,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">COORDINADORA DE REINGRESOS</h5>
+                    <h5 class="card-title">Coordinadora de reingresos</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Liliana Martínez</h6>
                     <p class="card-text">
                       Correo:</br> lmartisa@utel.edu.mx</br>
@@ -2612,7 +2612,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">RECEPCIÓN</h5>
+                    <h5 class="card-title">Recepción</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Adriana Vázquez Saucedo</h6>
                     <p class="card-text">
                       Cargo: </br> Responsable Recepción</br>
@@ -2624,7 +2624,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">RECEPCIÓN</h5>
+                    <h5 class="card-title">Recepción</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Andrea Ortíz Morales</h6>
                     <p class="card-text">
                       Cargo: </br> Responsable Recepción</br>
@@ -2638,7 +2638,7 @@
                     <h5 class="card-title">Responsable Vigilancia</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Albino Santiago</h6>
                     <p class="card-text">
-                      Cargo: </br> Responsable Recepción</br>
+                      Cargo: </br> Responsable de vigilancia</br>
                       Teléfono: </br> 5550897363</br>
                       Correo:</br> seglanaranja@gmail.com | seguridad-lanaranja@hotmail.com
                     </p>
