--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -36,14 +36,12 @@
                         <div class="card-body">
                           <h5 class="card-title text-center">Equivalencia</h5>
                           <p class="card-text" style="text-align: justify;">     
-                            
                             Trámite ante SEP para equiparar estudios realizados en el sistema educativo nacional.<br/><br/>
 
                             Una equivalencia es el documento a través del cual la autoridad educativa declara equiparables 
                             entre sí estudios realizados dentro del Sistema Educativo Nacional. <br/>
                           </p>
                         </div>                       
-
                       </div>
 
                       <div class="col-md-6">                        
@@ -322,7 +320,7 @@
               <!--UTEL HIGER-->
               <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
                 
-                <img class="mx-auto d-block img-fluid" src="img/escolares/Costos/Costos_mexico.png">
+                <img loading="lazy" class="mx-auto d-block img-fluid" src="img/escolares/Costos/Costos_mexico.png">
                 
               </div> 
 
