--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -27,7 +27,6 @@
         <div class="bloque activo" id="bloqueDocUtel">
           <div class="card border-0 py-3 px-3" style="text-align: justify;">
             <h4><b>Requisitos de los documentos.</b></h4></br>
-
             <a>
               Con la documentación física se realiza la inscripción oficial ante el sistema educativo (SEP) y desde ese momento registrar sus calificaciones cada periodo. 
               Al ser egresado y liberar su servicio social, tiene derecho a la emisión del Certificado de estudios y Título profesional/Grado académico.
@@ -41,15 +40,12 @@
               ● No rotos o incompletos</br>
               ● Con fotografía pegada y cancelada (certificados)</br>
               ● Con las firmas correspondientes u hologramas de verificación de autenticidad</br>
-
             </a>
-
           </div>
 
           <div class="border-3 card card-importante mx-3 mb-5">
             <div class="card-body">
               <strong class="">Importante</strong>
-
               <p class="card-text">
                 La documentación solo se solicita de forma digital, sin embargo, hay alumnos que aún cuentan con
                 expediente físico dentro de las instalaciones en Naucalpan ya que con anterioridad así se manejaba.
@@ -1014,41 +1010,6 @@
                     </div>
                   </div>
                 </div>
-
-                <!--Documentos Alianzas
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="panelsStayOpen-headingDiplo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#panelsStayOpen-collapseDiplo" aria-expanded="false"
-                      aria-controls="panelsStayOpen-collapseDiplo">
-                      Documentación para Alianzas
-                    </button>
-                  </h2>
-                  <div id="panelsStayOpen-collapseDiplo" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-headingDiplo">
-                    <div class="accordion-body">
-                      <div class="row">
-                        <div class="col">
-
-                        </div>
-
-                        <div class="col">
-                          
-                        </div>
-
-                        <div class="col">
-                          
-                        </div>
-
-                        <div class="col">
-                          
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-                -->
               </div>
             </div>
           </div>
@@ -1093,7 +1054,6 @@
                   </div>
 
                   <div class="col-md-4">
-                    <img style="width: 300px" src="img/Lega.png ">
                   </div>
                 </div>
               </div>
@@ -1451,7 +1411,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img style="width:  300px" src="img/Lega.png ">
+                    <img loading="lazy" style="width:  300px" src="img/Lega.png ">
                   </div>
                 </div>
               </div>
