--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -30,7 +30,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4 py-3" >
         <div class="col">
           <div class="card border-0">
-            <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
+            <img loading="lazy" src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Modalidades servicio social</h5>
               <p class="card-text" style="text-align: justify;">Se crean  nuevas modalidades de servicio social,  con el fin de que los alumnos tengan  mayor facilidad para realizar la liberación del servicio social.
@@ -41,7 +41,7 @@
         </div>
         <div class="col">
           <div class="card border-0">
-            <img src="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
+            <img loading="lazy" rc="img/Noticias/pagonoticia.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Colegiatura final outselling</h5>
               <p class="card-text" style="text-align: justify; ">Consiste en descuentos o pagos a plazos. Está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular.</p>
@@ -52,7 +52,7 @@
 
         <div class="col">
           <div class="card border-0">
-            <img src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
+            <img loading="lazy" src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Equivalencia Ecuador</h5>
               <p class="card-text" style="text-align: justify;">
@@ -64,7 +64,7 @@
 
         <div class="col">
           <div class="card border-0">
-            <img src="img/Noticias/equipoaviso.png" class="card-img-top" alt="...">
+            <img loading="lazy" src="img/Noticias/equipoaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nuevas supervisiones</h5>
               <p class="card-text" style="text-align: justify;">
@@ -78,7 +78,7 @@
 
         <div class="col">
           <div class="card border-0">
-            <img src="img/Noticias/aviso.png" class="card-img-top" alt="...">
+            <img loading="lazy" src="img/Noticias/aviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Correspondencia escolar</h5>
               <p class="card-text" style="text-align: justify;">
@@ -90,7 +90,7 @@
 
         <div class="col">
           <div class="card border-0">
-            <img src="img/Noticias/demora.png" class="card-img-top" alt="...">
+            <img loading="lazy" src="img/Noticias/demora.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Evento de entrega de documentos</h5>
               <p class="card-text" style="text-align: justify;">
